Unable to figure out the issue with the nav bar not aligning properly with the image
Fix for a later date
for now just leaving the image on top of the nav bar so it like somewhat decent

--- a/index.css
+++ b/index.css
@@ -1,27 +1,28 @@
-a {
-    text-decoration: none;
-    color: #fff;
-    display: inline-block;
+.pfp img, .pfp nav {
+    display: inline;
 }
 
-img {
-    position: fixed;
+.PFP img {
     top: 0;
     left: 0;
-    width: 70px;
-    height: 70px;
+    width: 85px;
+    height: 85px;
     margin: 25px;
+    border-radius: 1em;
+    
 }
-
+.PFP img:hover {
+    transform: scale(1.1);
+    transition: transform 0.5s;
+    box-shadow: 10px 10px 10px red;
+}
 nav ul {
     list-style-type: none;
     padding: 0;
     overflow: hidden;
     position: fixed;
     width: 100%;
-    justify-content: center;
     text-align: center;
-    margin-top: 15px;
 }
 nav ul li {
     padding-left: 30px;
